trying new action

--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -1,8 +1,5 @@
 name: Send Payload to App (Python)
 description: Sends a payload to the specified app endpoint using Python
-runs:
-  using: 'composite'
-  main: 'composite-action.yaml'
 inputs:
   app-endpoint:
     description: 'The endpoint to send the payload to'
@@ -10,3 +7,24 @@ inputs:
   app-name:
     description: 'The name of the app'
     required: true
+runs:
+  using: 'composite'
+  steps:
+    - name: Get latest release tag
+      id: get_latest_release
+      uses: actions/github-script@v6
+      with:
+        script: |
+          const latestRelease = await github.repos.getLatestRelease({
+            owner: context.repo.owner,
+            repo: context.repo.repo
+          });
+          core.setOutput('tag_name', latestRelease.data.tag_name);
+
+    - name: Run deploy-register.py
+      run: |
+        ROLLBACK=${{ steps.get_latest_release.outputs.tag_name }} python deploy-register.py
+      env:
+        GITHUB_SHA: ${{ github.sha }}
+        INPUT_APP_NAME: ${{ inputs.app-name }}
+        INPUT_APP_ENDPOINT: ${{ inputs.app-endpoint }}
