--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -15,11 +15,11 @@ runs:
       uses: actions/github-script@v6
       with:
         script: |
-          const latestRelease = await github.repos.getLatestRelease({
+          const { data: latestRelease } = await github.rest.repos.getLatestRelease({
             owner: context.repo.owner,
             repo: context.repo.repo
           });
-          core.setOutput('tag_name', latestRelease.data.tag_name);
+          core.setOutput('tag_name', latestRelease.tag_name);
 
     - name: Run deploy-register.py
       run: |
@@ -29,3 +29,4 @@ runs:
         GITHUB_SHA: ${{ github.sha }}
         INPUT_APP_NAME: ${{ inputs.app-name }}
         INPUT_APP_ENDPOINT: ${{ inputs.app-endpoint }}
+
