--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -23,7 +23,7 @@ runs:
 
     - name: Run deploy-register.py
       run: |
-        ROLLBACK=${{ steps.get_latest_release.outputs.tag_name }} python deploy-register.py
+        ROLLBACK=${{ steps.get_latest_release.outputs.tag_name }} python .github/deploy-register-action/deploy-register.py
       shell: bash
       env:
         GITHUB_SHA: ${{ github.sha }}
