--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -25,8 +25,8 @@ runs:
       run: |
         ROLLBACK=${{ steps.get_latest_release.outputs.tag_name }} python .github/deploy-register-action/deploy-register.py
       shell: bash
+      working-directory: ${{ github.workspace }}
       env:
         GITHUB_SHA: ${{ github.sha }}
         INPUT_APP_NAME: ${{ inputs.app-name }}
         INPUT_APP_ENDPOINT: ${{ inputs.app-endpoint }}
-
