--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -15,5 +15,5 @@ runs:
       with:
         python-version: '3.10'
     - name: Run Python script
-      run: deploy-register.py
+      run: ./deploy-register.py
       shell: bash
