--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -1,19 +1,34 @@
-name: 'Deploy Register Action'
-description: 'An action to deploy register'
+name: 'Send Payload Action'
+description: 'A GitHub Action to send a payload to a specified URL'
 inputs:
-  example-input:
-    description: 'An example input'
+  webhook_url:
+    description: 'The URL to send the payload to'
     required: true
-    default: 'default value'
+  deployment_version:
+    description: 'The deployment version'
+    required: true
+  app_name:
+    description: 'The application name'
+    required: true
+  rollback_version:
+    description: 'The rollback version'
+    required: true
 runs:
   using: 'composite'
   steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
     - name: Run Python script
-      run: ./deploy-register.py
-      shell: bash
+      run: |
+        python send_payload.py
+      env:
+        WEBHOOK_URL: ${{ inputs.webhook_url }}
+        DEPLOYMENT_VERSION: ${{ inputs.deployment_version }}
+        APP_NAME: ${{ inputs.app_name }}
+        ROLLBACK_VERSION: ${{ inputs.rollback_version }}
