--- a/.github/deploy-register-action/action.yaml
+++ b/.github/deploy-register-action/action.yaml
@@ -24,10 +24,11 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install requests
-    - name: Run Python script
       shell: bash
+    - name: Run Python script
       run: |
         python send_payload.py
+      shell: bash
       env:
         WEBHOOK_URL: ${{ inputs.webhook_url }}
         DEPLOYMENT_VERSION: ${{ inputs.deployment_version }}
