--- a/action.yaml
+++ b/action.yaml
@@ -26,6 +26,7 @@ runs:
         pip install requests
       shell: bash
     - name: Run Python script
+      working-directory: ${{ github.action_path }}
       run: |
         python send_payload.py
       shell: bash
